# apps/api/src/lists/lists.responses.ts
@@ -78,6 +78,13 @@ export const LISTS_LIST_API_OK_RESPONSE: ApiResponseNoStatusOptions = {
         type: "array",
         items: listItemSchema,
       },
+      summary: {
+        type: "object",
+        properties: {
+          totalItems: { type: "number" },
+        },
+        required: ["totalItems"],
+      },
       source: {
         type: "object",
         properties: {
@@ -110,7 +117,7 @@ export const LISTS_LIST_API_OK_RESPONSE: ApiResponseNoStatusOptions = {
         items: failedInstanceSchema,
       },
     },
-    required: ["items", "pagination", "source", "unavailableInstances"],
+    required: ["items", "summary", "pagination", "source", "unavailableInstances"],
   },
 };
 
